Fixes footer overlapping [ci skip]

--- a/rapp_web_services/gui/css/klpanagi.css
+++ b/rapp_web_services/gui/css/klpanagi.css
@@ -153,3 +153,11 @@
   height:10px;
 }
 
+body {
+  padding-bottom: 120px;
+}
+
+.push, footer {
+  height: 63px;
+}
+
